working mapped reader